# collectr

./: LICENSE  README.md  jsconfig.json
scripts/: serve  start
src/: app.d.ts  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/cdn/cr/: browser.html
src/features/backend/: backend.js  resolvers.js  schema.js
src/features/env/: env.js
src/features/store/: store.js
